# viral-content-generator

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  GitHub仓库创建指南.md  GitHub发布完整指南.md  GitHub发布指南.md  LICENSE  README.md  pyproject.toml  requirements.txt  skill.md  skill_v3.0.md  v3.0升级说明.md  viral_article_cli.py  代码质量升级报告.md  使用手册.md  发布前检查报告.md  发布脚本.ps1  快速参考卡.md  方案B执行完成报告.md  跨平台使用指南.md  风格配置模板.md  验收文档.md
examples/: 短视频脚本示例.md  长文创作示例.md
