[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "viral-content-generator"
version = "3.1.0"
description = "全平台内容创作系统 - 支持图文、短视频、长视频创作"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "Sunnyeung", email = "Sunnyeung369@users.noreply.github.com"}
]
keywords = [
    "content-creation",
    "viral-content",
    "writing-assistant",
    "short-video",
    "ai-content",
    "chinese-writing"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing",
    "Topic :: Utilities",
    "Natural Language :: Chinese",
]

dependencies = [
    "openai>=1.50.0",
    "anthropic>=0.40.0",
    "google-generativeai>=0.8.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "black>=24.0.0",
    "flake8>=7.0.0",
    "mypy>=1.10.0",
]

[project.urls]
Homepage = "https://github.com/Sunnyeung369/viral-content-generator"
Documentation = "https://github.com/Sunnyeung369/viral-content-generator#readme"
Repository = "https://github.com/Sunnyeung369/viral-content-generator.git"
Issues = "https://github.com/Sunnyeung369/viral-content-generator/issues"

[project.scripts]
viral-content = "viral_article_cli:main"

[tool.setuptools]
py-modules = ["viral_article_cli"]

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311", "py312"]
include = '\.pyi?$'

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
